Updated text, replaced back to top button

--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -3,45 +3,52 @@
     <div class="row">
         <div class="text-container">
             <h1>Candidate Ratings based on Progressive Questionaire</h1>
-            <div class="card">
-                <div class="forum content">
-                    <h4>Congratulations to the 10 Democratic candidates who participated in our Candidate Forum on July 16th, in Bartow.
-                    Thank you to Dr. Susan MacManus, our Forum Moderator, as well.</h4>
-
-                    <p>Over 100 members of the public and more than half a dozen members of the 
-                    media attended the event. This was an opportunity for progressive voters to watch, 
-                    listen and learn, and for the candidates to answer thoughtful questions and shine.<br>
-                    Video of the Forum will be posted on YouTube and this site soon.</p>
-                </div>
-            </div>
             <h2>2018 Candidate Assessment and Voter Awareness Initiative</h2>
             <div class="content showContent">
-                    <p>
-                        The energy and resources ready and waiting to support Progressive Democratic candidates 
-                        are at an all-time high. The Polk County Progressive Democratic Caucus (PCPDC) Candidate 
-                        Assessment and Voter Awareness Initiative was established to provide a reference for declared 
-                        Progressives and other Democrats and independents with progressive values to determine where 
-                        to focus their energy and resources.
-                    </p>
-                    <p>
-                        Questionnaires were sent to all candidates who have filed as Democrats for national or state
-                        offices that touch on Polk county. A select committee of PCPDC members is in place to apply 
-                        predefined criteria in an objective blind evaluation of candidate responses as they are received. 
-                        The questionnaires reflect a Progressive Democratic agenda. In fact, the questions were derived 
-                        directly from the Democratic Progressive Caucus of Florida’s platform.
-                    </p>
-                    <p>
-                        The evaluation rating indicates each candidate’s level of support for the progressive agenda. 
-                        In accordance with Florida Democratic Party bylaws, these evaluation ratings are not intended 
-                        to imply endorsement during this primary season, but rather to inform progressive minded voters
-                        within the county of each candidate’s overall alignment with progressive values.
-                    </p>
+                        <p>
+                            The energy and resources ready and waiting to support Progressive Democratic candidates 
+                            are at an all-time high. The Polk County Progressive Democratic Caucus (PCPDC) Candidate 
+                            Assessment and Voter Awareness Initiative was established to provide a reference for declared 
+                            Progressives and other Democrats and independents with progressive values to determine where 
+                            to focus their energy and resources.
+                        </p>
+                        <p>
+                            Questionnaires were sent to all candidates who have filed as Democrats for national or state
+                            offices that touch on Polk county. A select committee of PCPDC members is in place to apply 
+                            predefined criteria in an objective blind evaluation of candidate responses as they are received. 
+                            The questionnaires reflect a Progressive Democratic agenda. In fact, the questions were derived 
+                            directly from the Democratic Progressive Caucus of Florida’s platform.
+                        </p>
+                        <p>
+                            The evaluation rating indicates each candidate’s level of support for the progressive agenda. 
+                            In accordance with Florida Democratic Party bylaws, these evaluation ratings are not intended 
+                            to imply endorsement during this primary season, but rather to inform progressive minded voters
+                            within the county of each candidate’s overall alignment with progressive values.
+                        </p>
             </div>
             <div class="show-more hide-for-large">
                 <a>Show less <<</a>
             </div>
         </div>​
-    </div>    
+    </div>
+    <hr>
+    <div class="row">
+        <div class="forum content show-for-large">
+            <h4>Congratulations to the 10 Democratic candidates who participated in our Candidate Forum on July 16th, in Bartow.
+            Thank you to Dr. Susan MacManus, our Forum Moderator, as well.</h4>
+
+            <p>Over 100 members of the public and more than half a dozen members of the 
+            media attended the event. This was an opportunity for progressive voters to watch, 
+            listen and learn, and for the candidates to answer thoughtful questions and shine.<br>
+            Click the link below to watch the video on YouTube.</p>
+            <a href="https://www.youtube.com/channel/UCn03PIENn24al7I--A1VpSw" class="btn button">Forum Videos</a>
+        </div>
+        <div class="forum content hide-for-large">
+            <h4>Click the link below to watch Polk County Progressives – Candidate Forum on YouTube</h4>
+            <a href="https://www.youtube.com/channel/UCn03PIENn24al7I--A1VpSw" class="btn button">Forum Videos</a>
+        </div>
+
+    </div>
 </div>
 <br>
 <%= render 'candidates/candidatecard'%>
