--- a/app/views/layouts/_scrollTop.html.erb
+++ b/app/views/layouts/_scrollTop.html.erb
@@ -1,3 +1,1 @@
-<div class='scrolltop'>
-    <div class='scroll icon'><i class="fa fa-4x fa-angle-up"></i></div>
-</div>
+<a id="return-to-top"><i class="fa fa-chevron-up"></i></a>
